--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.2",
